<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_2_bg"
    tools:context=".ClientChatFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnDial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="158dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="32dp"
        android:baselineAligned="false"
        android:text="@string/btnDial"
        app:icon="@android:drawable/ic_menu_call"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/btnTextJonell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="284dp"
        android:text="@string/btnTextJonell"
        app:icon="@drawable/icon_chat"
        app:layout_constraintEnd_toEndOf="@id/btnTextJonell"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTextSune"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="152dp"
        android:text="@string/btnTextSune"
        app:icon="@drawable/icon_chat" />

    <Button
        android:id="@+id/btnTextSaveena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="218dp"
        android:text="@string/btnTextSaveena"
        app:icon="@drawable/icon_chat" />

    <Button
        android:id="@+id/btnBackClientHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="35dp"
        android:text="@string/btnBackClientHome" />

</RelativeLayout>