<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    tools:context=".PublishAdActivity">

    <RelativeLayout
        android:id="@+id/toolbarRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@drawable/main_bg_vector">

        <ImageButton
            android:id="@+id/toolbarBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:src="@drawable/icon_back"
            app:tint="?attr/colorOnBackground"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/toolbarTitleTxtView"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbarBackBtn"
            android:layout_marginStart="15dp"
            android:background="#2CFFFFFF"
            android:backgroundTint="#C3FFFFFF"
            android:text="@string/publish_a_new_property"
            android:textColor="?attr/colorOnBackground"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/toolbarSubtitleTxtView"
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbarTitleTxtView"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_toStartOf="@id/toolbarVisualImgView"
            android:background="#A4FFFFFF"
            android:backgroundTint="#ADFFFFFF"
            android:text="@string/reach_thousands_of_buyers_or_renters_ninstantly"
            android:textColor="?attr/colorOnBackground"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/toolbarVisualImgView"
            android:layout_width="110dp"
            android:layout_height="120dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="22dp"
            android:src="@drawable/house_icon_removebg" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarRelativeLayout"
        android:paddingHorizontal="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intent" />

            <RadioGroup
                android:id="@+id/intentRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/intentSellRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/intentRentRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>